--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 
-[dependencies]
+[dev-dependencies]
 test-generator = {  path = "..", version = "^0.1" }
