--- a/build-deps/Cargo.toml
+++ b/build-deps/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "build-deps"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 readme = "README.md"
@@ -14,4 +14,4 @@ repository = "https://github.com/frehberg/test-generator.git"
 
 [dependencies]
 glob = "^0.2"
-build-helper = "0.1.1"
+build-helper = "^0.1"
