introducing proc_macro_attribute 'test_resources' and 'bench_resources', deprecating other proc-macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,4 @@
-[package]
-name = "test-generator"
-version = "0.2.2"
-authors = ["Frank Rehberger <frehberg@gmail.com>"]
-edition = "2018"
-description = "Rust Test generator: enumerating entries according to file-system pattern and generating a test function for each entry."
-license = "Apache-2.0"
-readme = "README.md"
-keywords = ["test", "generator", "filesystem", "glob", "enumerate"]
-documentation = "https://docs.rs/test-generator"
-homepage = "https://github.com/frehberg/test-generator.git"
-repository = "https://github.com/frehberg/test-generator.git"
+[workspace]
+members = ["test-generator", "build-deps", "example"]
 
-[lib]
-proc-macro = true
-
-[dependencies]
-glob = "^0.2"
-quote = "0.6"
-syn = { version="0.15.26", features=["full"] }
-proc-macro2 = "0.4.25"
+default-members = ["test-generator", "build-deps"]
