--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "test-generator-example"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 build = "build.rs"
 
 [dev-dependencies]
-test-generator = {  path = "..", version = "^0.2" }
+test-generator =  { version = "^0.3", path = "../test-generator" }
+rustversion = "0.1.3"
 
 [build-dependencies]
-build-deps = {  path = "../build-deps", version = "^0.1" }
+build-deps = { version = "^0.1", path = "../build-deps" }
