--- a/test-generator/Cargo.toml
+++ b/test-generator/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 description = "Rust Test generator: enumerating entries according to file-system pattern and generating a test function for each entry."
-license = "Apache-2.0"
+license = "MIT/Apache-2.0"
 readme = "README.md"
 keywords = ["test", "generator", "filesystem", "glob", "enumerate"]
 documentation = "https://docs.rs/test-generator"
