--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ["test-generator", "build-deps", "example"]
+members = ["test-generator", "test-generator-utest", "build-deps", "example"]
 
-default-members = ["test-generator", "build-deps"]
+default-members = ["test-generator", "test-generator-utest", "build-deps"]
