--- a/test-generator-utest/Cargo.toml
+++ b/test-generator-utest/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "test-generator-utest"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
-description = "Rust Test generator: enumerating entries according to file-system pattern and generating a test function for each entry."
+description = "Rust UTest harness, covering the 3 phases: setup/test/teardown"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 keywords = ["test", "generator", "filesystem", "utest", "enumerate"]
-documentation = "https://docs.rs/test-generator"
+documentation = "https://docs.rs/test-generator-utest"
 homepage = "https://github.com/frehberg/test-generator.git"
 repository = "https://github.com/frehberg/test-generator.git"
 
