--- a/test-generator/Cargo.toml
+++ b/test-generator/Cargo.toml
@@ -16,6 +16,6 @@ proc-macro = true
 
 [dependencies]
 glob = "^0.3"
-quote = "0.6"
-syn = { version="^0.15", features=["full"] }
-proc-macro2 = "^0.4"
+quote = "1.0"
+syn = { version="1.0", features=["full"] }
+proc-macro2 = "1.0"
