--- a/test-generator/Cargo.toml
+++ b/test-generator/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Rust Test generator: enumerating entries according to file-system pattern and generating a test function for each entry."
 license = "MIT/Apache-2.0"
 readme = "README.md"
-keywords = ["test", "generator", "filesystem", "glob", "enumerate", "utest"]
+keywords = ["test", "generator", "filesystem", "glob", "utest"]
 documentation = "https://docs.rs/test-generator"
 homepage = "https://github.com/frehberg/test-generator.git"
 repository = "https://github.com/frehberg/test-generator.git"
